--- a/app.json
+++ b/app.json
@@ -23,7 +23,7 @@
       },
       "config": {
         "googleMaps": {
-          "apiKey": "AIzaSyCBt7iEoLn6qkXM3VxNLW4jBFVRcB0XP2o"
+          "apiKey": "Apikey"
         }
       }
     },
